--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.17.1",
-    "fs": "*"
+    "fs": "*",
+    "luxon": "^3.0.3",
+    "nodemailer": "^6.7.8"
   }
 }
